--- a/src/app/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/main-layout/nav-bar/nav-bar.component.html
@@ -1,21 +1,8 @@
 <div class="nav-bar">
 
-  <div class="left-section">
+  <emp-ng-branding class="left-section">
 
-    <img class="logo" [alt]="appConfig.data.organization"
-      [src]="appConfig.layout.displayNavbarHeader ? 'assets/img/customer/logo.png' : 'assets/img/customer/logo-main-page.png'"/>
-
-    <img class="logo-small" [alt]="appConfig.data.organization"
-      [src]="appConfig.layout.displayNavbarHeader ? 'assets/img/customer/logo.png' : 'assets/img/customer/logo-main-page-small.png'"/>
-
-    <div *ngIf="appConfig.layout.displayNavbarHeader" class="header-container">
-      <span class="header">{{appConfig.data.name}}</span>
-      <div class="subheader">
-        {{appConfig.data.hint}} &nbsp; &nbsp; | &nbsp; &nbsp; {{appConfig.data.organization}}
-      </div>
-    </div>
-
-  </div>
+  </emp-ng-branding>
 
   <emp-ng-main-menu class="main-menu">
 
