--- a/src/app/main-layout/nav-bar/nav-bar.component.scss
+++ b/src/app/main-layout/nav-bar/nav-bar.component.scss
@@ -4,12 +4,14 @@
  *
  * See LICENSE.txt in the project root for complete license information.
  */
+
 @import '../../../styles/variables', '../../../styles/mixins';
 
 $margin-size: 16px;
-$margin-size-border: 36px;
+$margin-size-border: 16px;
 $margin-size-small: 8px;
-$min-width-sides: 345px;
+$min-width-left: 430px;
+$min-width-right: 430px;
 
 .nav-bar {
   @include row;
@@ -25,31 +27,10 @@ $min-width-sides: 345px;
     @include row;
 
     width: auto;
-    min-width: $min-width-sides;
+    min-width: $min-width-left;
     align-items: center;
     white-space: nowrap;
     margin: 0 $margin-size 0 $margin-size-border;
-  }
-
-  .logo {
-    max-height: 46px;
-  }
-
-  .logo-small {
-    display: none;
-  }
-
-  .header-container {
-    padding-left: 8px;
-  }
-
-  .header {
-    text-transform: uppercase;
-  }
-
-  .subheader {
-    font-size: 8pt;
-    margin-top: 4px;
   }
 
   .main-menu {
@@ -57,27 +38,14 @@ $min-width-sides: 345px;
   }
 
   .right-section {
-    min-width: $min-width-sides;
+    min-width: $min-width-right;
     margin: 0 $margin-size-border 0 $margin-size;
   }
 
-  @media only screen and (max-width: 1366px) {
+  @media only screen and (max-width: 1140px) {
     .left-section {
       min-width: auto;
       margin: 0 $margin-size-small;
-    }
-
-    .logo {
-      display: none;
-    }
-
-    .logo-small {
-      display: flex;
-      max-height: 46px;
-    }
-
-    .header-container {
-      display: none;
     }
 
     .main-menu {
