--- a/src/app/main-layout/toolbar/toolbar.component.html
+++ b/src/app/main-layout/toolbar/toolbar.component.html
@@ -1,9 +1,10 @@
+
 <div class="toolbar-container">
 
   <button *empNgHasPermission="permissions.MODULE_SEARCH_RECORDABLE_SUBJECTS"
     class="toolbar-item"
     title="Buscador de registros"
-    [ngClass]="{'activate': toolSelected === 'SearchRecordableSubject'}"
+    [ngClass]="{'activate': this.displayAsideRight}"
     (click)="onToolClicked('SearchRecordableSubject')">
 
     <mat-icon>menu_book</mat-icon>
