--- a/src/app/main-layout/top-bar/top-bar.component.scss
+++ b/src/app/main-layout/top-bar/top-bar.component.scss
@@ -5,7 +5,7 @@
  * See LICENSE.txt in the project root for complete license information.
  */
 
-@import "../../../styles/variables";
+@import '../../../styles/variables';
 
 .topbar-container {
   display: flex;
@@ -32,8 +32,8 @@
     width: $toolbar-icon-size;
     height: $toolbar-icon-size;
     font-size: $toolbar-icon-size;
-    color: $toolbar-icon-color;
-    margin: calc(($toolbar-item-size - $toolbar-icon-size) / 2);
+    color: $checkbox-background-color;
+    margin-top: calc(($toolbar-item-size - $toolbar-icon-size) / 2);
   }
 }
 
@@ -43,6 +43,6 @@
   transition: 0.3s ease-out;
 
   .mat-icon {
-    color: darken($toolbar-icon-color, 5);
+    color: $primary-color;
   }
 }
