--- a/src/app/main-layout/user-session/user-session.component.html
+++ b/src/app/main-layout/user-session/user-session.component.html
@@ -21,7 +21,7 @@
 
     <div class="menu-user-info-container"  (click)="$event.stopPropagation();$event.preventDefault();">
       <span class="menu-user-name">{{principal.identity ? principal.identity.name : ''}}</span>
-      <span class="tag tag-info tag-small" [style.marginRight]="0" *ngIf="principal.identity" >
+      <span class="tag tag-small" [style.marginRight]="0" *ngIf="principal.identity" >
         User
       </span>
     </div>
@@ -30,15 +30,13 @@
 
     </mat-divider>
 
-    <button mat-menu-item fxLayoutAlign="space-between center" *ngIf="appLayoutConfig.displayChangeLanguage"
+    <button mat-menu-item *ngIf="appLayoutConfig.displayChangeLanguage"
       (click)="$event.stopPropagation();$event.preventDefault();">
-
-      Idioma
-      <mat-button-toggle-group appearance="standard" class="menu-user-toggle">
-        <mat-button-toggle value="eng" checked>Ing</mat-button-toggle>
-        <mat-button-toggle value="spa">Esp</mat-button-toggle>
-      </mat-button-toggle-group>
-
+        Idioma
+        <mat-button-toggle-group appearance="standard" class="menu-user-toggle">
+          <mat-button-toggle value="eng" checked>Ing</mat-button-toggle>
+          <mat-button-toggle value="spa">Esp</mat-button-toggle>
+        </mat-button-toggle-group>
     </button>
 
     <button mat-menu-item *ngIf="appLayoutConfig.displayChangePassword"> Cambiar contraseña </button>
